:sparkles: dependency version setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">daily_anime_app</string>
-    <string name="widget_description">오늘 신작 보기</string>
+    <string name="app_name">오타</string>
 </resources>
